Add consent checkbox for Aadhar data verification in join team form

--- a/join-team.html
+++ b/join-team.html
@@ -499,6 +499,13 @@
                 </div>
             </div>
 
+            <!-- take a concent to give the adhar data by using a checkbox  -->
+
+            <div class="form-group">
+                <input type="checkbox" id="consent" name="consent" required>
+                <label for="consent">I consent to provide my Aadhar data for verification purposes.</label>
+            </div>
+
             <button type="submit" id="submitBtn" disabled>Submit Application</button>
         </form>
 
