Add consent checkbox for Aadhar data verification in join team form, implement request logging middleware, and normalize user ID formatting in WhatsApp message utility

--- a/join-team.html
+++ b/join-team.html
@@ -499,6 +499,14 @@
                 </div>
             </div>
 
+            <!-- take concent from user to give adhar data make it necessary -->
+            <div class="form-group">
+                <label for="consent">I consent to share my Aadhar data with Traffic Buddy for verification purposes.</label>
+                <input type="checkbox" id="consent" name="consent" required>
+            </div>
+
+
+
             <button type="submit" id="submitBtn" disabled>Submit Application</button>
         </form>
 
