--- a/join-team.html
+++ b/join-team.html
@@ -633,7 +633,7 @@
                     <span class="label-en">Date of Birth *</span>
                     <span class="label-mr">जन्मतारीख *</span>
                 </div>
-                <input type="date" id="dateOfBirth" name="dateOfBirth" required max="2006-12-31">
+                <input type="date" id="dateOfBirth" name="dateOfBirth" required>
             </div>
 
             <div class="form-group">
